--- a/tictactoe.css
+++ b/tictactoe.css
@@ -1,48 +1,83 @@
-body {
-    font-family: monaco;
-    background-color: rgb(185, 129, 236);
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.col {
-    height: 150px;
-    text-align: center;
-    
-    
+.container {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: #eee;
 }
 
-#topLeft {
-    
+button {
+    outline: none;
+    border: 4px solid green;
+    padding: 10px 20px;
+    font-size: 1rem;
+    font-weight: bold;
+    background: none;
+    transition: all .2s ease-in-out;
 }
 
-#topCenter {
-    
-    
+button:hover {
+    cursor: pointer;
+    background: green;
+    color: white;
 }
 
-#topRight {
-    
+.play-area{
+    display: grid;
+    width: 300px;
+    height: 300px;
+    grid-template-columns: auto auto auto;
 }
 
-#middleLeft {
-    
+.block {
+    display: flex;
+    width: 100px;
+    height: 100px;
+    align-items: center;
+    justify-content: center;
+    font-size: 3rem;
+    font-weight: bold;
+    border: 3px solid black;
+    transition: background 0.2s ease-in-out;
 }
 
-#middleCenter {
-    
+.block:hover {
+    cursor: pointer;
+    background: #0ff30f;
 }
 
-#middleRight {
-   
+.occupied:hover {
+    background: #ff3a3a;
 }
 
-#bottomLeft {
-    
+#block_0,
+#block_1,
+#block_2 {
+    border-top: none;
 }
 
-#bottomCenter {
-    
+#block_0,
+#block_3,
+#block_6 {
+    border-left: none;
 }
 
-#bottomRight {
-    
+#block_6,
+#block_7,
+#block_8 {
+    border-bottom: none;
+}
+
+#block_2,
+#block_5,
+#block_8 {
+    border-right: none;
 }
