--- a/tictactoe.css
+++ b/tictactoe.css
@@ -1,43 +1,30 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+body {
+    font-family: "moncao";
+    background-image: url("https://wallpapercave.com/wp/wp9373646.jpg");
 }
 
-.container {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: #eee;
+header h1 {
+    font-size: 70px;
+    font-weight: 600;
+    background-image: linear-gradient(to left, #553c9a, #b393d3);
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
 }
 
-button {
-    outline: none;
-    border: 4px solid green;
-    padding: 10px 20px;
-    font-size: 1rem;
-    font-weight: bold;
-    background: none;
-    transition: all .2s ease-in-out;
+section {
+    text-align: center;
 }
 
-button:hover {
-    cursor: pointer;
-    background: green;
-    color: white;
-}
-
-.play-area{
+.game--container {
     display: grid;
     width: 300px;
     height: 300px;
     grid-template-columns: auto auto auto;
+    margin: auto;
+    
 }
-
-.block {
+.cell {
     display: flex;
     width: 100px;
     height: 100px;
@@ -45,39 +32,56 @@ button:hover {
     justify-content: center;
     font-size: 3rem;
     font-weight: bold;
-    border: 3px solid black;
-    transition: background 0.2s ease-in-out;
-}
+    border: 3px solid rgb(58, 38, 105);
+}   
 
-.block:hover {
+.cell:hover {
     cursor: pointer;
-    background: #0ff30f;
-}
+    background: #f3cd0f;
+  }
 
-.occupied:hover {
-    background: #ff3a3a;
-}
 
-#block_0,
-#block_1,
-#block_2 {
+#cell_0,
+#cell_1,
+#cell_2 {
     border-top: none;
 }
 
-#block_0,
-#block_3,
-#block_6 {
-    border-left: none;
+#cell_0,
+#cell_3,
+#cell_6 {
+  border-left: none;
 }
 
-#block_6,
-#block_7,
-#block_8 {
-    border-bottom: none;
+#cell_6,
+#cell_7,
+#cell_8 {
+  border-bottom: none;
 }
 
-#block_2,
-#block_5,
-#block_8 {
-    border-right: none;
+#cell_2,
+#cell_5,
+#cell_8 {
+  border-right: none;
+}
+
+.game--restart{
+    background-color: #490b86; 
+    border: none;
+    border-radius: 12px;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    }
+
+.game--status {
+    font-size: 40px;
+    font-weight: 600;
+    background-image: linear-gradient(to left, #22124f, #8961b1);
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
 }
